--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,9 @@ body{
   /*Footer*/
   .end{
   background: var(--NAVY-BLUE, #2E2F42);
+  padding: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   }
   .text-end{
   line-height: 1.17;
