--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,10 @@ body{
   }
   .logotype{
     margin-right: 76px;
+    margin-bottom: 16px;
+    display: inline-block;
   }
+
   .menu{
     gap: 40px;
   }
@@ -358,10 +361,12 @@ body{
   }
   /*Footer*/
   .end{
+  padding: 100px;
   background: var(--NAVY-BLUE, #2E2F42);
  
   }
   .text-end{
+  max-width: 264px;
   padding: 100px;
   padding-top: 100px;
   padding-bottom: 100px;
