--- a/css/styles.css
+++ b/css/styles.css
@@ -40,12 +40,6 @@ body{
     padding: 15px;
   .nav
   }
-
-  .list{
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-  }
   .page-navigation{
    background: var(--WHITE, #FFF);
    text-decoration: none;
@@ -57,10 +51,6 @@ body{
     margin: 0;
     list-style: none;
     border-radius: 4px;
-    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-      0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  
-    /*  Making ul.menu a Flex container  */
     display: flex;
     margin-top: 24px;
     font-weight: 71px;
@@ -121,6 +111,18 @@ body{
   .menu-link:hover{
   color: #404bbf;
   }
+  .list{
+    padding: 10px;
+    margin: 0;
+    list-style: none;
+    border-radius: 4px;
+    display: flex;
+    margin-top: 24px;
+    font-weight: 71px;
+    line-height: 24px;
+    margin-left: 24px;
+    margin-right: 15px;
+  }
   .menu-link:focus{
   color: #404bbf;
   }
@@ -135,11 +137,22 @@ body{
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
   color: var(--SLATE, #434455);
+
+  display: block;
+  padding: 10px;
+  border-radius: 4px;
+  text-decoration: none;
   }
   .menu-contact:hover,
   .menu-contact:focus{
   color: #404bbf;
   }
+
+
+
+
+
+  /*Hero*/
   .hero-image{
   padding: 188px;
   border: 1px solid #000;
@@ -371,7 +384,7 @@ body{
 
   /*Footer*/
   .end{
-   padding: 100px;
+   padding-top: 100px;
    background: var(--NAVY-BLUE, #2E2F42);
   }
 
@@ -381,13 +394,6 @@ body{
   letter-spacing: 0.02em;
   color: #f4f4fd;
   color: var(--CLOUD, #F4F4FD);
-  padding-top: 100px;
-  padding-bottom: 100px;
-  line-height: 1.17;
-  font-family: Roboto,sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
   }
   
   .logotype-span-foot{
