--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,12 @@ body{
     background-color:#ffffff;
   }
   .container{
+    display: flex;
     width: 1158px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
   ul,ol{
     list-style-type: none;
@@ -127,6 +128,7 @@ body{
   color: #404bbf;
   }
   .hedear-addres{
+  padding: 24px;
   font-style: normal;
   }
   .menu-contact{
@@ -142,6 +144,12 @@ body{
   padding: 10px;
   border-radius: 4px;
   text-decoration: none;
+  display: flex;
+  gap: 40px;
+  }
+  .contact-list{
+    display: flex;
+    gap: 40px;
   }
   .menu-contact:hover,
   .menu-contact:focus{
@@ -157,6 +165,7 @@ body{
   padding: 188px;
   border: 1px solid #000;
   background-color: #2e2f42;
+  text-align: center;
   }
   .main-head{
   text-align: center;
@@ -398,5 +407,8 @@ body{
   
   .logotype-span-foot{
   color: #f4f4fd;
+  }
+  .imeges{
+    display: block;
   }
   
