--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ body{
    align-items: center;
   }
   .menu {
+    display: flex;
     padding: 10px;
     margin: 0;
     list-style: none;
@@ -123,7 +124,7 @@ body{
   .menu-link:focus{
   color: #404bbf;
   }
-  .hedear-addres{
+  .hedear-address{
   padding: 24px;
   font-style: normal;
   }
@@ -226,8 +227,10 @@ body{
   letter-spacing: 0.02em;
   background: #ffffff;
   }
-
+ 
   .made-benefits{
+  display: flex;
+  gap: 24px;
   margin-bottom: 8px;
   padding: 120px;
   font-weight: 500;
@@ -238,6 +241,8 @@ body{
   visibility: hidden;
   }
   .made-menu{
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
   gap: 24px;
   padding: 120px;
   font-weight: 500;
@@ -255,6 +260,8 @@ body{
   }
   .made-menu-item-name{
   margin-bottom: 8px;
+  text-align: center;
+  margin-bottom: 8px;
   width: calc((100% - 72px) / 4);
   font-weight: 500;
   font-size: 20px;
@@ -269,7 +276,17 @@ body{
   letter-spacing: 0.02em;
   color: var(--SLATE, #434455);
   }
+
+
+
+
+
+
+
+
   .our-team{
+  padding-top: 120px; 
+  padding-bottom: 120px;
   gap: 24px;
   display: flex;
   padding: 120px;
@@ -305,6 +322,7 @@ body{
   border-radius: 0px 0px 0px 0px;
   }
   .our-team-name{
+  display: flex;
   background-color: #ffffff;
   font-weight: 500;
   font-size: 20px;
@@ -313,6 +331,9 @@ body{
   color: #2e2f42;
   }
   .our-team-list{
+  row-gap: 48px;
+  column-gap: 24px;
+  flex-wrap: wrap;
   background-color: #ffffff; 
   font-weight: 500;
   font-size: 20px;
@@ -415,6 +436,8 @@ body{
   color: var(--CLOUD, #F4F4FD);
   }
   .logotype{
+    margin-bottom: 16px;
+    display:inline-block;
     font-family: Raleway, sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -428,7 +451,3 @@ body{
   color: #f4f4fd;
   display: inline-block; 
   }
-  .imeg{
-    display: block;
-  }
-  
