--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,15 @@ body{
     background-color:#ffffff;
   }
   .container{
-    display: flex;
+  }
+  .header-conteiner{
     width: 1158px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
+    align-items: center;
+    justify-content: space-between;
   }
   ul,ol{
     list-style-type: none;
@@ -34,7 +37,6 @@ body{
     display: flex;
     margin: auto;
     padding: 15px;
-  .nav
   }
   .page-navigation{
    background: var(--WHITE, #FFF);
@@ -68,6 +70,7 @@ body{
     text-decoration: underline;
    }
   .logotype{
+  margin-right: 76px;
   font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -136,7 +139,6 @@ body{
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
   color: var(--SLATE, #434455);
-
   display: block;
   padding: 10px;
   border-radius: 4px;
@@ -160,12 +162,10 @@ body{
   /*Hero*/
   .hero-image{
   padding: 188px;
-  border: 1px solid #000;
   background-color: #2e2f42;
-  text-align: center;
+
   }
   .main-head{
-  padding: 188px;
   text-align: center;
   align-items: center;
   font-family: Roboto;
@@ -177,33 +177,33 @@ body{
   color: var(--WHITE, #ffffff);
   margin-bottom: 48px;
   max-width: 496px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-bottom: auto;
+  margin-top: auto;
   }
   .button-action{
+  text-align: center;
+  align-items: center;
   display: block;
   min-width: 169px;
-  border: none;
+  border: 70px;
   height: 56px;
   background-color: #4d5ae5;
   border-radius: 4px;
   cursor: pointer;
   font-weight: 500;
-  line-height: 1.5;
+  font-size: 16px;
+  line-height: 1.07;
   letter-spacing: 0.04em;
   color: #ffffff;
   background: var(--IRIS, #4D5AE5);
   font-size: 16px;
   cursor: pointer;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  align-items: center;
-  font-family: roboto;
+  font-family: Roboto;
   font-style: normal;
   margin-bottom: 48px;
   max-width: 496px;
-  display: block;
+  margin-bottom: auto;
+  margin-top: auto;
   }
   .button-action:hover,
   .button-action:focus{
@@ -217,6 +217,7 @@ body{
 
 
   .benefits{
+  padding: 188px;
   margin-bottom: 8px;
   display: flex;
   gap: 24px;
@@ -285,11 +286,12 @@ body{
 
 
   .our-team{
+
   padding-top: 120px; 
   padding-bottom: 120px;
   gap: 24px;
   display: flex;
-  padding: 120px;
+  padding: 188px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -434,6 +436,7 @@ body{
   font-weight: 400px;
   color: #f4f4fd;
   color: var(--CLOUD, #F4F4FD);
+  letter-spacing: 0.03em;
   }
   .logotype{
     margin-bottom: 16px;
@@ -445,6 +448,7 @@ body{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--IRIS, #4D5AE5);
+   
   }
 
   .logotype-span-foot{
