--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,11 @@ body{
     background-color:#ffffff;
   }
   .container{
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    display: block;
   }
   .header-conteiner{
     width: 1158px;
@@ -14,8 +19,25 @@ body{
     align-items: center;
     justify-content: space-between;
   }
+
+li{
+  width: calc((100% - 72px) / 4);
+}
+
   ul,ol{
-    list-style-type: none;
+   list-style-type: none;
+   width: calc((100% - 72px) / 4);
+   border-radius: 0px 0px 4px 4px;
+   gap: 24px;
+   padding: 0px;
+   margin: 0%px;
+   display: flex;
+   font-weight: 500;
+   font-size: 20px;
+   line-height: 1.2;
+   letter-spacing: 0.02em;
+   box-sizing: border-box;
+   list-style-type: none;
   }
   a {
     text-decoration: none;
@@ -44,19 +66,7 @@ body{
    display: flex;
    align-items: center;
   }
-  .menu {
-    display: flex;
-    padding: 10px;
-    margin: 0;
-    list-style: none;
-    border-radius: 4px;
-    display: flex;
-    margin-top: 24px;
-    font-weight: 71px;
-    line-height: 24px;
-    margin-left: 24px;
-    margin-right: 15px;
-  }
+  
   .menu .link {
     display: block;
     padding: 10px;
@@ -70,81 +80,77 @@ body{
     text-decoration: underline;
    }
   .logotype{
-  margin-right: 76px;
-  font-family: Raleway, sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.17; /* 116.667% */
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--IRIS, #4D5AE5);
+   font-family: Raleway, sans-serif;
+   font-size: 18px;
+   font-weight: 700;
+   line-height: 1.17; /* 116.667% */
+   letter-spacing: 0.03em;
+   text-transform: uppercase;
+   color: var(--IRIS, #4D5AE5);
   
   }
   .logotype-span{
-  font-family: Raleway,sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #2e2f42;
+   font-family: Raleway,sans-serif;
+   font-size: 18px;
+   font-weight: 700;
+   line-height: 1.17;
+   letter-spacing: 0.03em;
+   text-transform: uppercase;
+   color: #2e2f42;
   }
   .menu:hover{
-  color: #404bbf;
+   color: #404bbf;
   }
   .menu:focus{
-  color: #404bbf;
+   color: #404bbf;
   }
   .menu-item:hover{
-  color: #404bbf;
+   color: #404bbf;
   }
   .menu-item:focus{
-  color: #404bbf;
+   color: #404bbf;
   }
   .menu-link{
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5; /* 150% */
-  letter-spacing: 0.02em;
-  color: var(--NAVY-BLUE, #2E2F42);
+   font-family: Roboto, sans-serif;
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 1.5; /* 150% */
+   letter-spacing: 0.02em;
+   color: var(--NAVY-BLUE, #2E2F42);
+   display: flex;
+   gap: 40px;
+   padding: 24px 0;
   }
   .menu-link:hover{
-  color: #404bbf;
+   color: #404bbf;
   }
   .list{
-    padding: 10px;
-    margin: 0;
-    list-style: none;
-    border-radius: 4px;
     display: flex;
-    margin-top: 24px;
-    font-weight: 71px;
-    line-height: 24px;
-    margin-left: 24px;
-    margin-right: 15px;
+    gap: 24px;
   }
+
   .menu-link:focus{
-  color: #404bbf;
+   color: #404bbf;
   }
   .hedear-address{
-  padding: 24px;
-  font-style: normal;
+   padding: 24px;
+   font-style: normal;
+   margin: auto;
   }
   .menu-contact{
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5; /* 150% */
-  letter-spacing: 0.02em;
-  color: var(--SLATE, #434455);
-  display: block;
-  padding: 10px;
-  border-radius: 4px;
-  text-decoration: none;
-  display: flex;
-  gap: 40px;
+   font-family: Roboto, sans-serif;
+   font-size: 16px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 1.5; /* 150% */
+   letter-spacing: 0.02em;
+   color: var(--SLATE, #434455);
+   display: block;
+   padding: 10px;
+   border-radius: 4px;
+   text-decoration: none;
+   display: flex;
+   gap: 40px;
   }
   .contact-list{
     display: flex;
@@ -161,75 +167,69 @@ body{
 
   /*Hero*/
   .hero-image{
-  padding: 188px;
-  background-color: #2e2f42;
+   padding: 188px;
+   background-color: #2e2f42;
 
   }
   .main-head{
-  text-align: center;
-  align-items: center;
-  font-family: Roboto;
-  font-size: 56px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1.07; /* 107.143% */
-  letter-spacing: 0.02em;
-  color: var(--WHITE, #ffffff);
-  margin-bottom: 48px;
-  max-width: 496px;
-  margin-bottom: auto;
-  margin-top: auto;
+   text-align: center;
+   align-items: center;
+   font-family: Roboto;
+   font-size: 56px;
+   font-style: normal;
+   font-weight: 700;
+   line-height: 1.07; /* 107.143% */
+   letter-spacing: 0.02em;
+   color: var(--WHITE, #ffffff);
+   margin-bottom: 48px;
+   max-width: 496px;
+   margin-bottom: auto;
+   margin-top: auto;
   }
   .button-action{
-  text-align: center;
-  align-items: center;
-  display: block;
-  min-width: 169px;
-  border: 70px;
-  height: 56px;
-  background-color: #4d5ae5;
-  border-radius: 4px;
-  cursor: pointer;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.07;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-  background: var(--IRIS, #4D5AE5);
-  font-size: 16px;
-  cursor: pointer;
-  font-family: Roboto;
-  font-style: normal;
-  margin-bottom: 48px;
-  max-width: 496px;
-  margin-bottom: auto;
-  margin-top: auto;
+   text-align: center;
+   align-items: center;
+   display: block;
+   min-width: 169px;
+   border: 70px;
+   height: 56px;
+   background-color: #4d5ae5;
+   border-radius: 4px;
+   cursor: pointer;
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.07;
+   letter-spacing: 0.04em;
+   color: #ffffff;
+   background: var(--IRIS, #4D5AE5);
+   font-size: 16px;
+   cursor: pointer;
+   font-family: Roboto;
+   font-style: normal;
+   margin-bottom: 48px;
+   max-width: 496px;
+   margin-bottom: auto;
+   margin-top: auto;
   }
   .button-action:hover,
   .button-action:focus{
-  background-color: #404BBF;
-  margin-left: auto;
-  margin-right: auto;
+   background-color: #404BBF;
+   margin-left: auto;
+   margin-right: auto;
   }
 
 
 
 
-
+ /*section 1*/
   .benefits{
-  padding: 188px;
-  margin-bottom: 8px;
-  display: flex;
-  gap: 24px;
-  padding: 120px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  background: #ffffff;
+   padding: 120px 0;
+   gap: 24px;
+   padding: 120px;
   }
  
-  .made-benefits{
+ .made-benefits{
+ .visually-hidden
   display: flex;
   gap: 24px;
   margin-bottom: 8px;
@@ -240,43 +240,34 @@ body{
   letter-spacing:0.02em;
   color: #2e2f42;
   visibility: hidden;
-  }
-  .made-menu{
-  width: calc((100% - 72px) / 4);
-  border-radius: 0px 0px 4px 4px;
+ }
+  
+ .made-menu{
   gap: 24px;
-  padding: 120px;
+  display: flex;
+ }
+ .made-menu-item{
+  width: calc((100% - 72px)/4);
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
-  }
-  .made-menu-item{
-  width: calc((100%-72px)/4);
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  }
-  .made-menu-item-name{
+ }
+ .made-menu-item-name{
   margin-bottom: 8px;
-  text-align: center;
-  margin-bottom: 8px;
-  width: calc((100% - 72px) / 4);
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0.02em;
-  }
-  .made-menu-item-text{
+  letter-spacing: 0.02em;  
+ }
+ .made-menu-item-text{
   font-family: Roboto,sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.50; 
   letter-spacing: 0.02em;
   color: var(--SLATE, #434455);
-  }
+ }
 
 
 
@@ -284,32 +275,20 @@ body{
 
 
 
-
-  .our-team{
-
+ /*secton 2*/
+ .our-team{
   padding-top: 120px; 
   padding-bottom: 120px;
-  gap: 24px;
-  display: flex;
-  padding: 188px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  flex-shrink: 0;
-  border: 1px solid #000;
+  flex-shrink: 0px;
   background-color:#f4f4fd;
-  }
+ }
   .visually-hidden
 
  .container{
   padding: 32px;
-  }
-  .our-team-title{
-  margin-bottom: 8px;
+ }
+ .our-team-title{
   width: calc((100% - 72px) / 4);
-  color: var(--NAVY-BLUE, #2E2F42);
   text-align: center;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-family: Roboto, sans-serif;
@@ -322,8 +301,8 @@ body{
   color: #2e2f42;
   margin-bottom: 72px;
   border-radius: 0px 0px 0px 0px;
-  }
-  .our-team-name{
+ }
+ .our-team-name{
   display: flex;
   background-color: #ffffff;
   font-weight: 500;
@@ -331,8 +310,8 @@ body{
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  }
-  .our-team-list{
+ }
+ .our-team-list{
   row-gap: 48px;
   column-gap: 24px;
   flex-wrap: wrap;
@@ -341,8 +320,8 @@ body{
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  }
-  .name{
+ }
+ .name{
   text-align: center;
   font-family: Roboto, sans-serif;
   font-size: 20px;
@@ -353,8 +332,8 @@ body{
   color: var(--NAVY-BLUE, #2E2F42);
   text-align: center;
   margin-bottom: 8px;
-  }
-  .introduce{
+ }
+ .introduce{
   text-align: center;
   color: var(--SLATE, #434455);
   text-align: center;
@@ -364,20 +343,25 @@ body{
   font-weight: 400;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
-  }
-  .section-portfolio{
+ }
+
+
+
+
+   /*section 3*/
+ .section-portfolio{
   line-height: 1.11;
   background-color: #f4f4fd;
   padding-top: 120px;
-  pa: 120px;
-  }
-  .section-portfolio-title{
+  padding: 120px;
+ }
+ .section-portfolio-title{
   background-color: #ffffff;
   font-size: 36px;
   line-height: 1.11;
   padding-top: 120px;
-  }
-  .section-title{
+ }
+ .section-title{
   margin-bottom: 72px;
   color: var(--NAVY-BLUE, #2E2F42);
   text-align: center;
@@ -389,9 +373,9 @@ body{
   letter-spacing: 0.02em;
   text-transform: capitalize;
   background-color: #f4f4fd;
-  }
+ }
   
-  .list-portfolio{
+ .list-portfolio{
   display: flex;
   row-gap: 48px;
   column-gap: 24px;
@@ -399,8 +383,8 @@ body{
   display: flex;
   border: 1px solid var(--CORNFLOWER, #E7E9FC);
   background-color:#ffffff;
-  }
-  .portfolio-name{
+ }
+ .portfolio-name{
   width: calc((100% - 48px) / 3);
   font-family: Roboto, sans-serif;
   font-size:20px;
@@ -409,9 +393,9 @@ body{
   line-height: 1.2; /* 120% */
   letter-spacing: 0.02em;
   color: var(--NAVY-BLUE, #2E2F42);
-  }
+ }
 
-  .portfolio-type{
+ .portfolio-type{
   font-family: Roboto, sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -419,15 +403,18 @@ body{
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
   color: var(--SLATE, #434455);
-  }
+ }
+
+
+
 
   /*Footer*/
-  .end{
+ .end{
    padding: 100px;
    background: var(--NAVY-BLUE, #2E2F42);
-  }
+ }
 
-  .text-end{
+ .text-end{
   max-width: 264;
   line-height: 1.17;
   font-family: Roboto,sans-serif;
@@ -437,8 +424,8 @@ body{
   color: #f4f4fd;
   color: var(--CLOUD, #F4F4FD);
   letter-spacing: 0.03em;
-  }
-  .logotype{
+ }
+ .logotype{
     margin-bottom: 16px;
     display:inline-block;
     font-family: Raleway, sans-serif;
@@ -449,9 +436,9 @@ body{
     text-transform: uppercase;
     color: var(--IRIS, #4D5AE5);
    
-  }
+ }
 
-  .logotype-span-foot{
+ .logotype-span-foot{
   color: #f4f4fd;
   display: inline-block; 
-  }
+ }
