--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,16 @@ body{
     color: #434455;
     background-color:#ffffff;
   }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5.
+  h6,
+  p{
+    margin: 0px;
+  }
   .container{
     width: 1158px;
     padding: 0 15px;
@@ -52,7 +62,7 @@ li{
     padding: 24px;
   }
   button{
-  cursor: pointer;
+   cursor: pointer;
   }
   .page-header{
     border-bottom:  1px solid #e7e9fc;
@@ -87,6 +97,7 @@ li{
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: var(--IRIS, #4D5AE5);
+   margin-right: 76px;
   
   }
   .logotype-span{
@@ -134,8 +145,9 @@ li{
   }
   .hedear-address{
    padding: 24px;
-   font-style: normal;
-   margin: auto;
+   font-style: italic;
+   box-sizing: border-box;
+   margin-left: auto;
   }
   .menu-contact{
    font-family: Roboto, sans-serif;
@@ -152,9 +164,10 @@ li{
    display: flex;
    gap: 40px;
   }
+
   .contact-list{
-    display: flex;
-    gap: 40px;
+   display: flex;
+   gap: 40px;
   }
   .menu-contact:hover,
   .menu-contact:focus{
@@ -223,13 +236,12 @@ li{
 
  /*section 1*/
   .benefits{
-   padding: 120px 0;
    gap: 24px;
-   padding: 120px;
+   padding: 188px 0;
   }
- 
- .made-benefits{
+
  .visually-hidden
+ .made-benefits{
   display: flex;
   gap: 24px;
   margin-bottom: 8px;
@@ -252,6 +264,7 @@ li{
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  box-sizing: border-box;
  }
  .made-menu-item-name{
   margin-bottom: 8px;
