--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body{
     padding: 0 15px;
     margin: 0 auto;
     box-sizing: border-box;
-    display: block;
+    display: flex;
   }
   .header-conteiner{
     width: 1158px;
