--- a/css/styles.css
+++ b/css/styles.css
@@ -31,30 +31,20 @@ body{
     justify-content: space-between;
   }
 
-li{
-  width: calc((100% - 72px) / 4);
-}
-
   ul,ol{
    list-style-type: none;
-   width: calc((100% - 72px) / 4);
-   border-radius: 0px 0px 4px 4px;
    gap: 24px;
    padding: 0px;
    margin: 0%px;
-   display: flex;
-   font-weight: 500;
-   font-size: 20px;
-   line-height: 1.2;
-   letter-spacing: 0.02em;
-   box-sizing: border-box;
-   list-style-type: none;
+   column-gap: ;
+   row-gap: ;
   }
   a {
     text-decoration: none;
   }
 
   .menu{
+    display: flex;
     gap: 40px;
   }
   .menu-link{
@@ -64,6 +54,7 @@ li{
   }
   button{
    cursor: pointer;
+   margin: 0 auto;
   }
   .page-header{
     border-bottom:  1px solid #e7e9fc;
@@ -140,9 +131,6 @@ li{
    color: #404bbf;
   }
   .hedear-address{
-   padding: 24px;
-   font-style: italic;
-   box-sizing: border-box;
    margin-left: auto;
   }
   .menu-contact{
@@ -178,7 +166,6 @@ li{
   .hero-image{
    padding: 188px 0 188px;
    background-color: #2e2f42;
-
   }
   .main-head{
    text-align: center;
@@ -190,10 +177,8 @@ li{
    line-height: 1.07; /* 107.143% */
    letter-spacing: 0.02em;
    color: var(--WHITE, #ffffff);
-   margin-bottom: 48px;
    max-width: 496px;
-   margin-bottom: auto;
-   margin-top: auto;
+   margin: 0 auto;
   }
   .button-action{
    text-align: center;
@@ -217,8 +202,6 @@ li{
    font-style: normal;
    margin-bottom: 48px;
    max-width: 496px;
-   margin-bottom: auto;
-   margin-top: auto;
   }
   .button-action:hover,
   .button-action:focus{
@@ -243,6 +226,10 @@ li{
   margin: 1px;
   border: 0;
   padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0);
+  overflow: hidden;
  }
 
  .made-benefits{
@@ -285,6 +272,7 @@ li{
   line-height: 1.50; 
   letter-spacing: 0.02em;
   color: var(--SLATE, #434455);
+  margin: 0;
  }
 
 
@@ -306,7 +294,6 @@ li{
   padding: 32px;
  }
  .our-team-title{
-  width: calc((100% - 72px) / 4);
   text-align: center;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-family: Roboto, sans-serif;
@@ -322,22 +309,9 @@ li{
  }
  .our-team-name{
   display: flex;
-  background-color: #ffffff;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+gap: 24px;
  }
  .our-team-list{
-  row-gap: 48px;
-  column-gap: 24px;
-  flex-wrap: wrap;
-  background-color: #ffffff; 
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
  }
  .name{
   text-align: center;
@@ -369,15 +343,11 @@ li{
    /*section 4*/
  .section-portfolio{
   line-height: 1.11;
-  background-color: #f4f4fd;
-  padding-top: 120px;
-  padding: 120px;
+  padding: 120px 0;
  }
  .section-portfolio-title{
-  background-color: #ffffff;
-  font-size: 36px;
-  line-height: 1.11;
-  padding-top: 120px;
+  display: flex;
+  flex-wrap: wrap;
  }
  .section-title{
   margin-bottom: 72px;
@@ -390,20 +360,15 @@ li{
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  background-color: #f4f4fd;
  }
   
  .list-portfolio{
-  display: flex;
-  row-gap: 48px;
-  column-gap: 24px;
-  flex-wrap: wrap;
-  display: flex;
+
+ }
+ .div{  
   border: 1px solid var(--CORNFLOWER, #E7E9FC);
-  background-color:#ffffff;
  }
  .portfolio-name{
-  width: calc((100% - 48px) / 3);
   font-family: Roboto, sans-serif;
   font-size:20px;
   font-style: normal;
@@ -411,6 +376,10 @@ li{
   line-height: 1.2; /* 120% */
   letter-spacing: 0.02em;
   color: var(--NAVY-BLUE, #2E2F42);
+ }
+ .display{
+  display: block;
+  margin-bottom: 16px;
  }
 
  .portfolio-type{
@@ -433,7 +402,7 @@ li{
  }
 
  .text-end{
-  max-width: 264;
+  max-width: 264px;
   line-height: 1.17;
   font-family: Roboto,sans-serif;
   font-size: 16px;
@@ -455,7 +424,9 @@ li{
     color: var(--IRIS, #4D5AE5);
    
  }
-
+.display{
+  display: inline-block
+}
  .logotype-span-foot{
   color: #f4f4fd;
   display: inline-block; 
