--- a/css/styles.css
+++ b/css/styles.css
@@ -223,13 +223,16 @@ body{
   position: absolute;
   width: 1px;
   height: 1px;
-  margin: 1px;
+  margin: -1px;
   border: 0;
   padding: 0;
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0);
   overflow: hidden;
+  outline: 0;
+  outline-offset: 0;
+  margin-bottom: 8px;
  }
 
  .made-benefits{
@@ -307,6 +310,9 @@ body{
   margin-bottom: 72px;
   border-radius: 0px 0px 4px 4px;
  }
+ .name-introduse{
+  padding: 32px 0;
+ }
  .our-team-name{
   display: flex;
 gap: 24px;
@@ -324,6 +330,7 @@ gap: 24px;
   color: var(--NAVY-BLUE, #2E2F42);
   text-align: center;
   margin-bottom: 8px;
+  border-radius: 0px 0px 4px 4px;
  }
  .introduce{
   text-align: center;
@@ -348,6 +355,7 @@ gap: 24px;
  .section-portfolio-title{
   display: flex;
   flex-wrap: wrap;
+  row-gap: 48px;
  }
  .section-title{
   margin-bottom: 72px;
@@ -376,6 +384,7 @@ gap: 24px;
   line-height: 1.2; /* 120% */
   letter-spacing: 0.02em;
   color: var(--NAVY-BLUE, #2E2F42);
+  margin-bottom: 8px;
  }
  .display{
   display: block;
@@ -415,13 +424,7 @@ gap: 24px;
  .logotype{
     margin-bottom: 16px;
     display: inline-block;
-    font-family: Raleway, sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.17; /* 116.667% */
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--IRIS, #4D5AE5);
+    margin-bottom: 16px;
    
  }
 .display{
@@ -429,5 +432,4 @@ gap: 24px;
 }
  .logotype-span-foot{
   color: #f4f4fd;
-  display: inline-block; 
  }
