--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,7 @@ body{
   text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
-  border-radius: 0px 0px 4px 4px;
+  
  }
  .name-introduse{
   padding: 32px 0;
@@ -318,6 +318,7 @@ body{
 gap: 24px;
  }
  .our-team-list{
+  border-radius: 0px 0px 4px 4px;
  }
  .name{
   text-align: center;
@@ -371,7 +372,11 @@ gap: 24px;
  }
   
  .list-portfolio{
-
+  width: calc((100% - 48px) / 3);
+ }
+ .container{
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
  }
  .div{  
   border: 1px solid var(--CORNFLOWER, #E7E9FC);
@@ -432,4 +437,5 @@ gap: 24px;
 }
  .logotype-span-foot{
   color: #f4f4fd;
+  display: inline-block;
  }
