--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@ body{
     padding: 0 15px;
     margin: 0 auto;
     display: flex;
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
   }
   .header-conteiner{
     width: 1158px;
@@ -374,12 +376,10 @@ gap: 24px;
  .list-portfolio{
   width: calc((100% - 48px) / 3);
  }
- .container{
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
- }
+ 
  .div{  
   border: 1px solid var(--CORNFLOWER, #E7E9FC);
+  padding: 32px 0;
  }
  .portfolio-name{
   font-family: Roboto, sans-serif;
@@ -425,6 +425,7 @@ gap: 24px;
   color: #f4f4fd;
   color: var(--CLOUD, #F4F4FD);
   letter-spacing: 0.03em;
+  display: inline-block
  }
  .logotype{
     margin-bottom: 16px;
@@ -432,10 +433,7 @@ gap: 24px;
     margin-bottom: 16px;
    
  }
-.display{
-  display: inline-block
-}
+
  .logotype-span-foot{
   color: #f4f4fd;
-  display: inline-block;
  }
