--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,7 @@ body{
   h1,
   h2,
   h3,
-  h4,
-  h5.
-  h6,
+  h4
   p{
     margin: 0px;
   }
@@ -20,9 +18,7 @@ body{
     width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
-    display: flex;
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
+    padding: 0 15px;
   }
   .header-conteiner{
     width: 1158px;
@@ -42,7 +38,7 @@ body{
    column-gap: ;
    row-gap: ;
   }
-  a {
+  a{
     text-decoration: none;
   }
 
@@ -125,7 +121,7 @@ body{
   .menu-link:hover{
    color: #404bbf;
   }
-  .list{
+  .adress-list{
     display: flex;
     gap: 40px;
   }
@@ -413,6 +409,7 @@ gap: 24px;
  .end{
    padding: 100px 0;
    background: var(--NAVY-BLUE, #2E2F42);
+   display: inline-block
  }
 
  .text-end{
