--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body{
   h1,
   h2,
   h3,
-  h4
+  h4,
   p{
     margin: 0px;
   }
@@ -16,7 +16,6 @@ body{
   }
   .container{
     width: 1158px;
-    padding: 0 15px;
     margin: 0 auto;
     padding: 0 15px;
   }
@@ -32,8 +31,6 @@ body{
 
   ul,ol{
    list-style-type: none;
-   gap: 24px;
-   padding: 0px;
    margin: 0%px;
    column-gap: ;
    row-gap: ;
@@ -41,6 +38,7 @@ body{
   a{
     text-decoration: none;
   }
+ 
 
   .menu{
     display: flex;
@@ -140,11 +138,6 @@ body{
    line-height: 1.5; /* 150% */
    letter-spacing: 0.02em;
    color: var(--SLATE, #434455);
-   display: block;
-   border-radius: 4px;
-   text-decoration: none;
-   display: flex;
-   gap: 40px;
   }
 
   .contact-list{
@@ -176,7 +169,9 @@ body{
    letter-spacing: 0.02em;
    color: var(--WHITE, #ffffff);
    max-width: 496px;
-   margin: 0 auto;
+   margin-bottom: 48px;
+   margin-left: auto;
+   margin-right: auto;
   }
   .button-action{
    text-align: center;
@@ -249,13 +244,7 @@ body{
   display: flex;
  }
  .made-menu-item{
-  margin-bottom: 8px;
   width: calc((100% - 72px)/4);
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  box-sizing: border-box;
  }
  .made-menu-item-name{
   margin-bottom: 8px;
@@ -263,7 +252,6 @@ body{
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;  
-  margin: 0;
  }
  .made-menu-item-text{
   font-family: Roboto,sans-serif;
@@ -373,8 +361,10 @@ gap: 24px;
  }
  
  .div{  
-  border: 1px solid var(--CORNFLOWER, #E7E9FC);
-  padding: 32px 0;
+  padding-top: 32px ;
+  padding-bottom: 32px;
+  padding-left: 0;
+  padding-right: 0;
  }
  .portfolio-name{
   font-family: Roboto, sans-serif;
@@ -408,7 +398,7 @@ gap: 24px;
  .end{
    padding: 100px 0;
    background: var(--NAVY-BLUE, #2E2F42);
-   display: inline-block
+   display: block
  }
 
  .text-end{
@@ -421,7 +411,6 @@ gap: 24px;
   color: #f4f4fd;
   color: var(--CLOUD, #F4F4FD);
   letter-spacing: 0.03em;
-  display: inline-block
  }
 
  .logotype-span-foot{
