--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,6 @@ img {
     margin: 0 auto;
     padding: 0 15px;
 }
-
 /* header */
 
 .header {
@@ -49,7 +48,11 @@ img {
     display: flex;
     justify-content: space-around;
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+
 
 .nav {
     display: flex;
@@ -122,6 +125,7 @@ ul {
 .adress-list-type {
     color: #434455;
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-list {
@@ -133,11 +137,33 @@ ul {
     padding: 24px 0;
 }
 
+.nav-list-item.active {
+    color: #404bbf;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+        
+.nav-list-item.active::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    width: 100%;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
+
 /* section 1 */
  
 .section-one-main {
     background: var(--NAVY-BLUE, #2E2F42);
     padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office1.jpg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
   
 .section-one-button {
@@ -154,6 +180,7 @@ ul {
     border-radius: 4px;
     cursor: pointer;
     margin:0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-one-main-header {
@@ -206,6 +233,19 @@ button:focus {
     padding: 120px 0;
 }
 
+.icon-section-two-main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    border-radius: 4px;
+    border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+    background: var(--CLOUD, #F4F4FD);
+}
+
 /* section 3 */
 
 .section-three-main {
@@ -241,6 +281,9 @@ button:focus {
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-box {
@@ -259,6 +302,41 @@ button:focus {
 
 .section-items-section-three {
     text-align: center;
+    margin-bottom: 8px;
+}
+
+.social-media-section-three-main {
+    justify-content: center;
+    gap: 24px;
+    display: flex;
+}
+
+.social-media-list-section-three-main {
+    width: 40px;
+    height: 40px;
+}
+
+.social-media-link-section-three-main {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-media-link-section-three-main:hover {
+    background-color: #404bbf;
+}
+
+.social-media-link-section-three-main:focus {
+    background-color: #404bbf;
+}
+
+.social-media-items-section-three-main {
+    fill: #f4f4fd;
 }
 
 /* section 4 */
@@ -290,13 +368,43 @@ button:focus {
 
 .section-four-items {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section-four-items:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);    
+}
+
+.section-four-items:hover .list-app-text {
+    transform: translateY(0%);
 }
 
 .portfolio-box {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
+}
+
+.list-app-photo {
+    position: relative;
+    overflow: hidden;
+}
+
+.list-app-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* footer */
@@ -318,6 +426,7 @@ button:focus {
     line-height: 1.17;
     display: inline-block;
     margin-bottom: 16px;
+    text-decoration: none;
 }
 
 .studio-footer {
@@ -329,6 +438,7 @@ button:focus {
     letter-spacing: 0.54px;
     text-transform: uppercase;
     display: inline-block;
+    text-decoration: none;
 }
 
 .p-footer {
@@ -339,4 +449,55 @@ button:focus {
     line-height: 24px;
     letter-spacing: 0.32px;
     max-width: 264px;
+}
+
+.container.footer {
+    display: flex;
+    align-items: baseline;
+}
+
+.social-media-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.social-media-list {
+    display: flex;
+    gap: 16px;
+}
+
+.social-media-list-items {
+    width: 40px;
+    height: 40px;
+}
+
+.social-media-list-item-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.social-media-list-item-link:hover {
+    background-color: #31d0aa;
+}
+
+.social-media-list-item-link:focus {
+    background-color: #31d0aa;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-media-item-footer {
+    fill: #f4f4fd;
+}
+
+.logo-p-footer {
+    margin-right: 120px;
 }
