--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ ul {
 .section-one-main {
     background: var(--NAVY-BLUE, #2E2F42);
     padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../imeges/hero/people-office1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../imeges/people-office1.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
